--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script defer src="./index.js"></script>
+    <title>영화웹사이트</title>
+    <script type="module" defer src="./index.js"></script>
   </head>
   <body>
-    <div class="container">
-      <div class="card">
-        <span class="name">상품명</span>
-        <span class="price">가격</span>
-      </div>
-    </div>
+    <form>
+      <input type="text" placeholder="영화제목을 입력하세요" /><button>
+        버튼
+      </button>
+    </form>
   </body>
 </html>
