--- a/todo/index.html
+++ b/todo/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>영화웹사이트</title>
-    <script type="module" defer src="./index.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
   </head>
   <body>
     <form>
-      <input type="text" placeholder="영화제목을 입력하세요" /><button>
-        버튼
-      </button>
+      <input type="text" placeholder="할 일을 입력하세요." />
+      <button>등록</button>
     </form>
+
+    <ul></ul>
+
+    <script src="./index.js"></script>
   </body>
 </html>
